tiled background done is CSS
Former-commit-id: 7eddd2b07e98de3c706d89c63117cf31b8c8b66c

--- a/public_HTTPS/style.css
+++ b/public_HTTPS/style.css
@@ -29,6 +29,11 @@ body {
 	cursor: none;
 }
 
+#background {
+	position:absolute;
+	overflow: hidden;
+}
+
 #main {
 	position:absolute;
 	left: 0px;
