--- a/public_HTTPS/style_mgr.css
+++ b/public_HTTPS/style_mgr.css
@@ -27,6 +27,20 @@ p, label, span {
 	font-size: 12px;
 }
 
+ul {
+	padding: 0;
+	margin-left: 20px;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+}
+
+li {
+	list-style: disc outside none;
+	display: list-item;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+}
+
 input, button {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px;
@@ -191,4 +205,3 @@ input, button {
 .css-treeview input:checked ~ ul {
 	display: block;
 }
-
