fixed sageUI file browsers and SAGE Pointer help windows
Former-commit-id: 3c9ad7b36ab691d92c54efdc3aa1f82f12444fd9

--- a/public_HTTPS/style_mgr.css
+++ b/public_HTTPS/style_mgr.css
@@ -104,18 +104,6 @@ input, button {
 	margin: 10px;
 }
 
-
-li {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	font-weight: normal;
-	font-style: normal;
-	width: 800px;
-	overflow: scroll;
-	text-indent: 5px;
-	color: #BBBBBB;
-}
-
 footer {
 	color: #BBBBBB;
 	margin: 5px;
@@ -123,7 +111,18 @@ footer {
 	text-align: left;
     bottom: 0;
     position: fixed;
+    white-space: nowrap;
+    width: 100%;
+	overflow: scroll;
 	z-index:-10;
+}
+
+footer li {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 10pt;
+	font-weight: normal;
+	font-style: normal;
+	list-style: none outside none;
 }
 
 .fileLabel {
