sageUI elements all dynamically fit on page
Former-commit-id: bc82c6e1ae87fe3bf2126ee32a24488406e189ca

--- a/public_HTTPS/css/style_mgr.css
+++ b/public_HTTPS/css/style_mgr.css
@@ -76,6 +76,14 @@ dialog#lb_light {
 	background-color: #FFFFFF;
 }
 
+#uiWindow {
+	margin-top: 10px;
+}
+
+#extraInteraction {
+	overflow: auto;
+}
+
 #fileUpload {
 	float: left;
 	margin-top: 10px;
