--- a/public_HTTPS/css/style_mgr.css
+++ b/public_HTTPS/css/style_mgr.css
@@ -20,6 +20,8 @@
 
 body {
 	text-align: center;
+	width: 100%;
+	height: 100%;
 }
 
 p, label, span {
@@ -49,28 +51,33 @@ input, button {
 
 /* Dialog (sagePointer lock) */
 dialog {
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 6px;
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-  margin:0 auto;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 6px;
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	margin:0 auto;
 }
 /* background behind the dialogs */
 dialog::backdrop {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.75);
 }
 /* Dialog for the fileBrowser */
-dialog#lb_light {
-    width: 70%;
+#lb_light {
+    width: 50%;
     height: 50%;
+}
+
+#lb_pointer_help {
+    width: 50%;
 }
 
 
 #wrapper {
 	width: 100%;
+	height: 100%;
 	margin: 0 auto;
 	text-align: center;
 	background-color: #FFFFFF;
@@ -126,7 +133,7 @@ dialog#lb_light {
 }
 
 #fileTreeList {
-	width: 95%;
+	width: 100%;
 	height: 85%;
 	overflow: scroll;
 	background-color: #D9D9D9;
@@ -170,6 +177,10 @@ footer li {
     width:110px;
     text-align: right;
     padding: 3px 10px 3px 0px;
+}
+
+.fileItem {
+	cursor: default;
 }
 
 .lb_blackoverlay {
