--- a/public_HTTPS/css/style_mgr.css
+++ b/public_HTTPS/css/style_mgr.css
@@ -20,8 +20,6 @@
 
 body {
 	text-align: center;
-	width: 100%;
-	height: 100%;
 }
 
 p, label, span {
@@ -132,16 +130,46 @@ dialog::backdrop {
 	width: 60px;
 }
 
-#fileTreeList {
+#fileBrowser {
 	width: 100%;
 	height: 85%;
-	overflow: scroll;
 	background-color: #D9D9D9;
+}
+
+#fileTreeList {
+	width: 60%;
+	height: 100%;
+	float: left;
+	border-right: solid 1px #000000;
+	white-space: nowrap;
+	overflow: scroll;
+}
+
+#metadata {
+	width: 39%;
+	height: 100%;
+	float: right;
+	text-align: center;
+}
+
+#thumbnail {
+	max-width: 90%;
+	max-height: 90%;
+	margin-top: 5%;
 }
 
 #fileButtons {
 	text-align: left;
 	margin: 5px;
+}
+
+#textWidthTest {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	position: absolute;
+	visibility: hidden;
+	height: auto;
+	width: auto;
 }
 
 footer {
@@ -222,16 +250,6 @@ footer li {
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	user-select: none;
-	width:50%;
-}
-
-.sidebox {
-	position: absolute;
-	width:50%;
-	height:100%;
-	left:50%;
-	top:0;
-    margin-top: 20px;
 }
 
 .css-treeview ul,
