adding new & changed files to GoTime
Former-commit-id: 647bd7dfe9e9fa240027b018a435685c5805eed5

--- a/public_HTTPS/css/GoTime.css
+++ b/public_HTTPS/css/GoTime.css
@@ -88,3 +88,13 @@
 	text-align:right;
 	margin-left:5px;
 }
+
+#GoTimeHelpBtn {
+	float: left;
+}
+
+#GoTimeHelpBtn a {
+	text-decoration: none;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+}
