added snapping & looping. streamlined play/pause. added control buttons for playback. added scaling/repositioning to keyframes based on currentFrame. made deleting work better. updated slider ticks for timeline.
Former-commit-id: efddd20fd4e1e053e18133eec7536c9febc4b729

--- a/public_HTTPS/css/style_mgr.css
+++ b/public_HTTPS/css/style_mgr.css
@@ -95,7 +95,7 @@ dialog::backdrop {
 	margin-left: 10px;
 	padding: 5px;
 	width: 250px;
-	height: 105px;
+	height: 75px;
 	text-align: left;
 	border: solid 1px #000000;
 	background-color: #FFFFFF;
@@ -110,13 +110,13 @@ dialog::backdrop {
 	border: dashed 3px #54C238;
 }
 
-#sagePointer, #screenShare, #openWebpage, #layout {
+#sagePointer, #screenShare, #openWebpage, #layout, #GoTimeControls {
 	float: left;
 	margin-top: 10px;
 	margin-left: 10px;
 	padding: 5px;
 	width: 250px;
-	height: 105px;
+	height: 75px;
 	text-align: left;
 	border: solid 1px #000000;
 	background-color: #FFFFFF;
