--- a/public_HTTPS/css/GoTime.css
+++ b/public_HTTPS/css/GoTime.css
@@ -23,19 +23,11 @@
 .timeline label {display:inline-block; margin-right:5px; width: 100px;}
 .timeline label span {color:#999; }
 .timeline .input {width:200px; border:1px solid #E0E0E0; background:#F6F6F6; }
-.timeline .app {float:left; width:99%; margin-right:10px; text-align: right; padding-top: 5px;}
+.timeline .app {float:left; width:99%; height:50px; margin-right:10px; text-align: right; }
 .timeline .app .input {width:50px; }
 
-#GoTimeControls {
-	float: left;
-	margin-top: 10px;
-	margin-left: 10px;
-	padding: 5px;
-	width: 250px;
-	height: 105px;
-	text-align: left;
-	border: solid 1px #000000;
-	background-color: #FFFFFF;
+.GoTimeBtn {
+	width: 30px;
 }
 
 #timelineSliderLI {
@@ -77,7 +69,7 @@
 
 .sliderLabels {
 	width: 50px;
-	padding-top: 2px;
+	padding-top: 0px;
 	text-align: center;
 }
 
@@ -97,4 +89,27 @@
 	text-decoration: none;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
+}
+
+#GoTimeSnap {
+	/*float: left;*/
+	display: flex;
+}
+
+#GoTimeLoop {
+	/*float: left;*/
+	display: flex;
+}
+
+#GoTimeOptions {
+	position: absolute;
+	width: 115px;
+	height: 35px;
+	padding: 2px;
+	background: lightgray;
+	text-align: left;
+}
+
+#GoTimeControlButtons {
+	text-align: center;
 }
