--- a/public_HTTPS/css/style_ui.css
+++ b/public_HTTPS/css/style_ui.css
@@ -110,6 +110,14 @@ p {
 
 
 /***** Light Box    *****/
+#sage2pointer_dialog {
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
 #mediaBrowser {
 	left: 25%;
 	top: 25%;
