added app launcher browser
Former-commit-id: d1faf58e9fc3028653b81962e96dc16b17c40da1

--- a/public_HTTPS/css/style_ui.css
+++ b/public_HTTPS/css/style_ui.css
@@ -125,6 +125,19 @@ p {
 	height: 50%;
 }
 
+#appListContainer {
+	position: absolute;
+	left: 12px;
+	top: 12px;
+	margin: 0px;
+	overflow: scroll;
+}
+
+#appList {
+	width: 100%;
+	background-color: #D9D9D9;
+}
+
 #appOKBtn {
 	position: absolute;
 	left: 10px;
