updated scroll icon in sage2 pointer help
Former-commit-id: 2e066a25f51a1c3c09df2e10c620cf45c7317af5

--- a/public_HTTPS/css/style_ui.css
+++ b/public_HTTPS/css/style_ui.css
@@ -252,7 +252,7 @@ span {
 
 #arrangementCloseBtn {
 	position: absolute;
-	left: 10px;
+	right: 10px;
 	bottom: 10px;
 }
 
@@ -299,7 +299,7 @@ span {
 }
 
 #screenShareQuality {
-	width: 80px;
+	width: 100px;
 }
 
 #screenShareQualityIndicator {
@@ -308,7 +308,7 @@ span {
 
 #settingsCloseBtn {
 	position: absolute;
-	left: 10px;
+	right: 10px;
 	bottom: 10px;
 }
 
