added save session to arrangement dialog
Former-commit-id: b56e62c1bc6d6c1db122c49f5336da24db055a32

--- a/public_HTTPS/css/style_ui.css
+++ b/public_HTTPS/css/style_ui.css
@@ -262,6 +262,12 @@ span {
 	text-align: center;
 }
 
+#savesessionContainer {
+	width: 100px;
+	float: left;
+	text-align: center;
+}
+
 #arrangementCloseBtn {
 	position: absolute;
 	right: 10px;
