--- a/public_HTTPS/css/style.css
+++ b/public_HTTPS/css/style.css
@@ -65,9 +65,9 @@ body {
 
 .windowControls {
 	position:absolute;
-	background-color: #666666;
-	border: solid 1px #000000;
-	box-shadow: 8px 8px 12px #222222;
+	background-color: rgba(0,0,0,0.0);
+	/*border: solid 1px #000000;*/
+	/*box-shadow: 8px 8px 12px #222222;*/
 	overflow: hidden;
 }
 
@@ -78,4 +78,28 @@ body {
 
 .sageItem {
 	display: block;
+}
+
+.widgetBackground{
+	fill: rgba(140,140,140,1.0);
+	stroke: rgba(180,180,180,1.0);
+	stroke-width:1;
+}
+.widgetText {
+	text-anchor:middle;
+	font-family:sans-serif;
+	font-size:0.8rem;
+	color: rgba(30,30,30,1.0);
+}
+
+.sliderText {
+	text-anchor:middle;
+	font-family:sans-serif;
+	font-size:0.8rem;
+	color: rgba(30,30,30,1.0);
+}
+
+
+.sliderKnob{
+	border-radius: 0.5rem;
 }
