--- a/public_HTTPS/css/style.css
+++ b/public_HTTPS/css/style.css
@@ -88,14 +88,13 @@ body {
 .widgetText {
 	text-anchor:middle;
 	font-family:sans-serif;
-	color: rgba(30,30,30,1.0);
+	fill: rgba(250,250,250,1.0);
 }
 
 .sliderText {
 	text-anchor:middle;
 	font-family:sans-serif;
-	font-size:0.8rem;
-	color: rgba(30,30,30,1.0);
+	fill: rgba(250,250,250,1.0);
 }
 
 
