update sage2 UI for menu icons to scale with device pixelRatio
Former-commit-id: 405292b9008e1e8714dc72a571fe3867458dedea

--- a/public_HTTPS/css/style_ui.css
+++ b/public_HTTPS/css/style_ui.css
@@ -88,10 +88,10 @@ span {
 	transition: 100ms ease-in-out;
 }
 
-.uiButton img:hover {
-	-webkit-transform: scale(1.2);
-	-moz-transform: scale(1.2);
-	transform: scale(1.2);
+.uiButton:hover img {
+	-webkit-transform: scale(1.0);
+	-moz-transform: scale(1.0);
+	transform: scale(1.0);
 }
 
 .uiButton p {
@@ -105,14 +105,14 @@ span {
 	color: #FFFFFF;
 	background-color: #787878;
 	border-radius: 8px;
-	opacity: 0.0;
+	opacity: 1.0;
 	cursor: default;
 	-webkit-transition: opacity 100ms ease-in-out;
 	-moz-transition: opacity 100ms ease-in-out;
 	transition: opacity 100ms ease-in-out;
 }
 
-.uiButton img:hover + p {
+.uiButton:hover img + p {
 	opacity: 1.0;
 }
 
@@ -477,11 +477,6 @@ span {
 #dropboxFilesBtn {
 	position: absolute;
 	left: 90px;
-	bottom: 10px;
-}
-#cancelFilesBtn {
-	position: absolute;
-	right: 10px;
 	bottom: 10px;
 }
 #cancelFilesBtn {
