--- a/public_HTTPS/css/style_audio.css
+++ b/public_HTTPS/css/style_audio.css
@@ -13,6 +13,32 @@
 
 /* CSS Document */
 
+@font-face {
+	font-family: 'Arimo';
+	src: url('/css/Arimo-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Arimo';
+	src: url('/css/Arimo-Italic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: italic;
+}
+@font-face {
+	font-family: 'Arimo';
+	src: url('/css/Arimo-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Arimo';
+	src: url('/css/Arimo-BoldItalic.ttf') format('truetype');
+	font-weight: bold;
+	font-style: italic;
+}
+
+
 * {
 	margin: 0;
 	padding: 0;
@@ -22,6 +48,40 @@ body {
 	text-align: center;
 }
 
+td {
+	padding: 2px 6px 2px 6px;
+	border: solid 1px #000000;
+}
+
 #main {
+	width: 820px;
+	text-align: left;
+	font-family: Arimo;
+	font-size: 14px;
+}
+
+#videos {
 	width: 800px;
+	margin: 20px;
+	border-collapse: collapse;
+}
+
+#videos tr {
+	height: 24px;
+}
+
+.videoTitle {
+	width: 600px;
+}
+
+.videoVolume {
+	width: 100px;
+}
+
+.videoPlay {
+	width: 100px;
+}
+
+.videoVolumeSlider {
+	width: 90px;
 }
