--- a/public_HTTPS/css/style_audio.css
+++ b/public_HTTPS/css/style_audio.css
@@ -54,14 +54,14 @@ td {
 }
 
 #main {
-	width: 820px;
+	width: 920px;
 	text-align: left;
 	font-family: Arimo;
 	font-size: 14px;
 }
 
 #videos {
-	width: 800px;
+	width: 900px;
 	margin: 20px;
 	border-collapse: collapse;
 }
@@ -75,6 +75,10 @@ td {
 }
 
 .videoVolume {
+	width: 100px;
+}
+
+.videoTime {
 	width: 100px;
 }
 
