--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,6 +130,7 @@ body {
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	overflow: hidden;
 	border: 4px solid #000000;
 	background-color: rgba(255, 255, 255, 0.75);
 	box-shadow: 8px 4px 15px #222222;
@@ -145,6 +146,7 @@ body {
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	overflow: hidden;
 	border: 4px solid #000000;
 	border-bottom: none;
 	box-shadow: 8px 4px 15px #222222;
