--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,6 +142,16 @@ body {
 	transform-origin: 0% 0% 0;
 }
 
+.dataSharingOverlay {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	overflow: hidden;
+	-webkit-transform-origin: 0% 0% 0;
+	-moz-transform-origin: 0% 0% 0;
+	transform-origin: 0% 0% 0;
+}
+
 .dataSharingTitle {
 	position: absolute;
 	left: 0px;
