--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,7 +131,7 @@ body {
 	left: 0px;
 	top: 0px;
 	overflow: hidden;
-	border: 4px solid #000000;
+	/*border: 4px solid #000000;*/
 	background-color: rgba(255, 255, 255, 0.75);
 	box-shadow: 8px 4px 15px #222222;
 	-webkit-box-sizing: border-box;
