Updating apps for widget api changes
Former-commit-id: 572bfa85a29ac28387baa09224a376f8a8402dda
Former-commit-id: 27df6b8ca2538e44437be8826c0b139b6aef7239

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,12 +93,18 @@ body {
 .widgetText {
 	text-anchor: middle;
 	font-family: Arimo, Helvetica, sans-serif;
+	fill: rgba(109,130,159,1.0);
+}
+
+.widgetLabel {
+	text-anchor: middle;
+	font-family: Arimo, Helvetica, sans-serif;
 	fill: rgba(250,250,250,1.0);
 }
 
 .textInput {
 	font-family: Arimo, Helvetica, sans-serif;
-	fill: rgba(250,250,250,1.0);
+	fill: rgba(59,80,109,1.0);
 	font-weight: lighter; 
 	font-style: normal;
 }
