fixes to drawing formatting

--- a/public/css/style_ui.css
+++ b/public/css/style_ui.css
@@ -719,6 +719,31 @@ h2 {
 	transform: translate(-50%, -50%);
 }
 
+.uidzBarBox {
+	width: 	30px;
+	height: 30px;
+	border: 1px solid black;
+}
+.uidzBarAll {
+	height: 		100%;
+	left: 			50%;
+	position: 		relative;
+	background: 	black;
+	-webkit-transform: translate(-50%, 0);
+	-moz-transform: translate(-50%, 0);
+	-ms-transform: translate(-50%, 0);
+	transform: translate(-50%, 0);
+}
+.uidzBarS1{ width: 1px; }
+.uidzBarS2{ width: 2px; }
+.uidzBarS3{ width: 4px; }
+.uidzBarS4{ width: 8px; }
+.uidzBarS5{ width: 16px; }
+.uidzBarS6{ width: 32px; }
+.uidzBarS7{ width: 64px; }
+
+
+
 .fileItem {
 	cursor: default;
 }
