--- a/public/uploads/apps/TDFA/tdfa/css/master.css
+++ b/public/uploads/apps/TDFA/tdfa/css/master.css
@@ -61,6 +61,9 @@
 .btn.disabled {
   background-color: #202020;
 }
+.btn.disabled > label {
+  color: grey;
+}
 .btn-group > .btn {
   border-radius: 0px;
 }
