--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,7 @@ body {
 	top: 0;
 	overflow: hidden;
 	border: 4px solid #14B4C8;
+	background-color: rgba(40, 200, 220, 0.25);
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
