--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,7 +173,7 @@ body {
 	left: 0;
 	top: 0;
 	overflow: hidden;
-	border: 4px solid #a5a5a5;
+	/*border: 4px solid #a5a5a5;*/
 	/*background-color: rgba(40, 200, 220, 0.25);*/
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
